# charisma-agency-poc-py

./: .env.example  .gitignore  langgraph.json  pyproject.toml  readme.md
.claude/: CLAUDE.md
autoresearch/: dataset.json  eval.py  loop.py  program.md  results.tsv
src/agent001/: agent.py
src/agent002/: agent.py
src/agent003/: agent.py  system_prompt.py
src/agent003/tools/: mcp_tools.py
src/agent004/: agent.py
src/agent004/tools/: internet_search.py
src/agent005/: agent.py
src/agent005/workspace/: MEMORY.md  README.md  hello.txt  sample.txt
src/agent005/workspace/data/: users.json
src/agent005/workspace/skills/kill-port/: SKILL.md
src/agent007/: agent.py  system_prompt.py
src/agent007/tools/: mcp_tools.py
tests/: test_agents_playwright.py
