[project]
name = "charisma-agency-py"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "langchain-mcp-adapters>=0.2.0",
    "langchain-tavily>=0.1.0",
    "deepagents>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["langgraph-cli>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.18",
    "playwright>=1.58.0",
]
